Design minor fixes on mobile playback view

--- a/src/app/themes/volumio3/playback/volumio3-playback.scss
+++ b/src/app/themes/volumio3/playback/volumio3-playback.scss
@@ -104,6 +104,10 @@
     }
   }
 
+  .player-seekbar-container{
+    margin-bottom: 8px;
+  }
+
 }
 
 i#closePlaybackPanelWrapper {
